--- a/Data_Modeling-Cassandra/Data_Modeling-Cassandra.ipynb
+++ b/Data_Modeling-Cassandra/Data_Modeling-Cassandra.ipynb
@@ -1,1 +1,634 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "# Part I. ETL Pipeline for Pre-Processing the Files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Import Python packages "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import cassandra\n",
+    "import re\n",
+    "import os\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "import json\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Creating list of filepaths to process original event csv data files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/workspace\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())\n",
+    "\n",
+    "filepath = os.getcwd() + '/event_data'\n",
+    "\n",
+    "for root, dirs, files in os.walk(filepath):\n",
+    "    \n",
+    "    file_path_list = glob.glob(os.path.join(root,'*'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Processing the files to create the data file csv that will be used for Apache Casssandra tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "full_data_rows_list = [] \n",
+    "    \n",
+    "for f in file_path_list:\n",
+    "\n",
+    "    with open(f, 'r', encoding = 'utf8', newline='') as csvfile: \n",
+    "        csvreader = csv.reader(csvfile) \n",
+    "        next(csvreader)\n",
+    "        \n",
+    "        for line in csvreader:\n",
+    "            full_data_rows_list.append(line) \n",
+    "            \n",
+    "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
+    "\n",
+    "with open('event_datafile_new.csv', 'w', encoding = 'utf8', newline='') as f:\n",
+    "    writer = csv.writer(f, dialect='myDialect')\n",
+    "    writer.writerow(['artist','firstName','gender','itemInSession','lastName','length',\\\n",
+    "                'level','location','sessionId','song','userId'])\n",
+    "    for row in full_data_rows_list:\n",
+    "        if (row[0] == ''):\n",
+    "            continue\n",
+    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7], row[8], row[12], row[13], row[16]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6821\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
+    "    print(sum(1 for line in f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "\n",
+    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "- artist \n",
+    "- firstName of user\n",
+    "- gender of user\n",
+    "- item number in session\n",
+    "- last name of user\n",
+    "- length of the song\n",
+    "- level (paid or free song)\n",
+    "- location of the user\n",
+    "- sessionId\n",
+    "- song title\n",
+    "- userId\n",
+    "\n",
+    "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
+    "\n",
+    "<img src=\"images/image_event_datafile_new.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "## Begin writing your Apache Cassandra code in the cells below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Creating a Cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "from cassandra.cluster import Cluster\n",
+    "cluster = Cluster(['127.0.0.1'])\n",
+    "\n",
+    "session = cluster.connect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Create Keyspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x7fdff68aacc0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.execute(\"\"\"\n",
+    "    CREATE KEYSPACE IF NOT EXISTS sparkify\n",
+    "    WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 }\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Set Keyspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "session.set_keyspace('sparkify')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "## Create queries to ask the following three questions of the data\n",
+    "\n",
+    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "\n",
+    "\n",
+    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "    \n",
+    "\n",
+    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Query 1:  Give me the artist, song title and song's length in the music app history that was heard during sessionId = 338, and itemInSession = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x7fdff68aa160>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.execute(\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS songs_session\n",
+    "    (sessionId int, itemInSession int, artist text, song_title text, song_length float,\n",
+    "    PRIMARY KEY(sessionId, itemInSession))\n",
+    "    \"\"\")\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO songs_session (sessionId, itemInSession, artist, song_title, song_length)\"\n",
+    "        query = query + \" VALUES (%s, %s, %s, %s, %s)\"\n",
+    "        artist_name, user_name, gender, itemInSession, user_last_name, length, level, location, sessionId, song, userId = line\n",
+    "        session.execute(query, (int(sessionId), int(itemInSession), artist_name, song, float(length)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### SELECT statement to verify that the data have been inserted into each table. Data is fetched from songs_session table filtered against session id equlaing 338 and Item In Session equaling 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faithless Music Matters (Mark Knight Dub) 495.30731201171875\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = session.execute(\"\"\"SELECT artist, song_title, song_length FROM songs_session WHERE sessionId = 338 AND itemInSession = 4\"\"\")\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.artist, row.song_title, row.song_length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x7fdff68aa6d8>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.execute(\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS songs_user\n",
+    "    (userId int, sessionId int, artist text, song text, firstName text, lastName text, itemInSession int,\n",
+    "    PRIMARY KEY((userId, sessionId), itemInSession))\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO songs_user (userId, sessionId, artist, song, firstName, lastName, itemInSession)\"\n",
+    "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        artist, firstName, gender, itemInSession, lastName, length, level, location, sessionId, song, userId = line\n",
+    "        session.execute(query, (int(userId), int(sessionId), artist, song, firstName, lastName, int(itemInSession)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### SELECT statement to verify the results for Query 2. Data is fetched from songs_user table filtered against user id equaling 30 and session id equaling 182"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Down To The Bone Keep On Keepin' On Sylvie Cruz\n",
+      "1 Three Drives Greece 2000 Sylvie Cruz\n",
+      "2 Sebastien Tellier Kilometer Sylvie Cruz\n",
+      "3 Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = session.execute(\"\"\"SELECT itemInSession, artist, song, firstName, lastName FROM songs_user WHERE userId = 10 AND sessionId = 182\"\"\")\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.iteminsession, row.artist, row.song, row.firstname, row.lastname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x7fdff68b97f0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.execute(\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS app_history\n",
+    "    (song text, firstName text, lastName text, userId int,\n",
+    "    PRIMARY KEY(song, userId))\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header   \n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO app_history (song, firstName, lastName, userId)\"\n",
+    "        query = query + \" VALUES (%s, %s, %s, %s)\"\n",
+    "        artist, firstName, gender, itemInSession, lastName, length, level, location, sessionId, song, userId = line\n",
+    "        session.execute(query, (song, firstName, lastName, int(userId)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### SELECT statement to verify the results for Query 3 . Data is fetched from app_history table filtered against song equaling 'All Hands Against His Own'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacqueline Lynch\n",
+      "Tegan Levine\n",
+      "Sara Johnson\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = session.execute(\"\"\"SELECT firstName, lastName FROM app_history WHERE song = 'All Hands Against His Own'\"\"\")\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.firstname, row.lastname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Drop the tables before closing out the sessions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x7fdff6893978>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.execute(\"\"\"DROP TABLE songs_session\"\"\")\n",
+    "\n",
+    "session.execute(\"\"\"DROP TABLE songs_user\"\"\")\n",
+    "\n",
+    "session.execute(\"\"\"DROP TABLE app_history\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Close the session and cluster connection¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "session.shutdown()\n",
+    "cluster.shutdown()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
